# opengd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  reallocate.sh
.github/workflows/: cmake.yml
Classes/: AchievementManager.cpp  AchievementManager.h  AchievementNotifier.cpp  AchievementNotifier.h  AlertLayer.cpp  AlertLayer.h  AlertLayerProtocol.cpp  AlertLayerProtocol.h  AppDelegate.cpp  AppDelegate.h  CircleWave.cpp  CircleWave.h  ColoursPalette.cpp  ColoursPalette.h  CompileLayer.cpp  CompileLayer.h  CreatorLayer.cpp  CreatorLayer.h  DebugLayer.cpp  DebugLayer.h  DropDownLayer.cpp  DropDownLayer.h  GJGameLevel.cpp  GJGameLevel.h  GJGroundLayer.cpp  GJGroundLayer.h  GJMoreGamesLayer.cpp  GJMoreGamesLayer.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GameToolbox.cpp  GameToolbox.h  GarageLayer.cpp  GarageLayer.h  GitHubLayer.cpp  GitHubLayer.h  GroundLayer.cpp  GroundLayer.h  (+29 more)
Classes/Discord/lib/x86/: CMakeLists.txt
Scripts/: precompile.sh  setdate.bat
cocos2d/: auto-download-deps.py  auto-install-deps-linux.sh  install-deps-linux.sh
cocos2d/cocos/2d/: CCFontAtlasCache.cpp  CCLabel.cpp  CCMenu.cpp  CCMenu.h  CCNode.h  CCSprite.cpp  CCSpriteFrameCache.cpp
cocos2d/cocos/base/: CCDirector.cpp
cocos2d/cocos/platform/: CCFileUtils.cpp  CCFileUtils.h
cocos2d/cocos/renderer/: CCTextureCache.cpp
proj.android/: build.gradle  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
(+6 files in other folders)
